[package]
name = "goeld"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bsp = { path = "./bsp" }
collision = "0.20"
wgpu = "0.6"
winit = "0.23"
winit-async = { path = "./winit-async/" }
futures = "0.3"
bytemuck = "1"
lazy_static = "1.4"
cgmath = "0.17"
itertools = "0.9"
fnv = "1"
rect_packer = "0.2"
image = "0.23"
memoffset = "0.5"
anyhow = "1"
jemallocator = { version = "0.3", optional = true }
goldsrc-mdl = { path = "./goldsrc-mdl/" }

[build-dependencies]
shaderc = "0.6"

[features]
default = ["jemallocator"]

[workspace]
members = ["bsp", "goldsrc-mdl", "goldsrc-format-common"]
