[package]
name = "goeld"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraydeque = "0.4"
anyhow = "1"
async-trait = "0.1"
bsp = { path = "./bsp" }
bitflags = "1"
bytemuck = "1"
cgmath = "0.18"
collision = { git = "https://github.com/Vurich/collision-rs" }
fnv = "1"
futures = "0.3"
goldsrc-mdl = { path = "./goldsrc-mdl/" }
image = "0.23"
imgui = "0.6"
imgui-wgpu = "0.12"
imgui-winit-support = "0.6"
itertools = "0.10"
lazy_static = "1.4"
memoffset = "0.6"
# TODO: Use `guillotiere`
rect_packer = "0.2"
wgpu = "0.6"
winit = "0.24"
winit-async = { path = "./winit-async/" }

jemallocator = { version = "0.3", optional = true }

[build-dependencies]
shaderc = "0.7"

[features]
default = ["jemallocator"]

[workspace]
members = ["bsp", "goldsrc-mdl", "goldsrc-format-common"]

[profile.release]
lto = "thin"
