[package]
name = "bsp"
version = "0.1.2"
authors = ["Vurich <jackefransham@gmail.com>"]
homepage = "https://github.com/Vurich/bsp"
repository = "https://github.com/Vurich/bsp"
description = "Crate to load BSP files efficiently - currently only works for Quake 3 BSP files. Fork of `quake3_loader` crate."
license = "MIT"
edition = "2018"

[dependencies]
arrayvec = "0.5"
bitflags = "1"
bv = "0.11"
itertools = "0.10"
goldsrc-format-common = { path = "../goldsrc-format-common/", features = ["nightly"] }
image = "0.23"
fnv = "1"

[features]
bench = []
