[package]
name = "goldsrc-mdl"
version = "0.1.0"
authors = ["Jef <jackefransham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5"
cgmath = "0.17"
goldsrc-format-common = { path = "../goldsrc-format-common/", features = ["nightly"] }
bitflags = "1"
itertools = "0.9"
image = "0.23"
positioned-io = "0.2"
